--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
-        <title>Project for Ice_S</title>
+        <a href="https://github.com/Ic2furry"><title>Сайтег Великого и ужасного Ice_S</title></a>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap_theme/bootstrap.css" rel="stylesheet" type="text/css">
         <!-- Custom styles for this template -->
@@ -20,25 +20,13 @@
                 <p class="col-md-8 fs-5 opacity-75 text-white">На этом сайте можно найти контакты с помощью которых можно связатся со мной</p>
                 <hr class="col-3 col-md-2 mb-5">
                 <div class="g-5 row"> 
-                    <style>.btn-3d { 
-    display: inline-block; 
-    background: #00BFFF	; color: white; 
-    padding: 12px 12px; 
-    font-size: 18px; 
-    font-weight: bold; 
-    text-decoration: none; 
-    box-shadow: 0px 5px 0px #1E90FF; 
-    transition: 0.2s; 
-    position: relative; } .btn-3d:active { 
-    box-shadow: 0px 2px 0px #1E90FF; 
-    transform: translateY(3px); }</style>                     <a href="https://t.me/IceS_F" class="btn-3d placeholder-glow ps-5 w-75" target="_blank">ТГ</a><a href="https://discordapp.com/users/918416730253041664/" class="btn-3d placeholder-glow ps-5 w-75" target="_blank">Discord</a> 
+                    <style>.btn-3d { display: inline-block; background: #00BFFF	; color: white; padding: 12px 12px; font-size: 18px; font-weight: bold; text-decoration: none; box-shadow: 0px 5px 0px #1E90FF; transition: 0.2s; position: relative; } .btn-3d:active { box-shadow: 0px 2px 0px #1E90FF; transform: translateY(3px); }</style>                     <a href="https://t.me/IceS_F" class="btn-3d placeholder-glow ps-5 w-75" target="_blank">ТГ</a><a href="https://discordapp.com/users/918416730253041664/" class="btn-3d placeholder-glow ps-5 w-75" target="_blank">Discord</a> 
                     <div class="col-md-10">
                         <h2>Ну на этом все, пока что мне лень что-то еще добавлятьXD</h2>
                         <p class="opacity-75">Но если понадобится то возможно добавлю хехех.</p>
                         <ul class="icon-list">
 </ul>
                     </div>
-
             </main>
             <footer class="pt-5">
                 <hr class="mb-4">
@@ -47,5 +35,7 @@
         </div>
         <script src="assets/js/popper.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
+        <img src="1224149.png"/>
+        <h1>Heading 1</h1>
     </body>
 </html>
