--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
-        <a href="https://github.com/Ic2furry"><title>Сайтег Великого и ужасного Ice_S</title></a>
+        <a href="https://github.com/Ic2furry">Сайтег Великого и ужасного Ice_S</a>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap_theme/bootstrap.css" rel="stylesheet" type="text/css">
         <!-- Custom styles for this template -->
