--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
-        <a href="https://github.com/Ic2furry">Сайтег Великого и ужасного Ice_S</a>
+        <title>Ice_S</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap_theme/bootstrap.css" rel="stylesheet" type="text/css">
         <!-- Custom styles for this template -->
@@ -13,7 +13,7 @@
     </head>
     <body class="align-items-center d-flex font-monospace fw-semibold h6 me-md-5 pb-5 pe-3 pe-md-5 pe-sm-4 poster ps-3 ps-md-0 ps-sm-4 pt-1 text-white">
         <div class="col-lg-8 col-xl-7 dark-background-on-small pb-5 pe-3 pe-md-5 pe-sm-4 ps-3 ps-md-5 ps-sm-4 pt-5 py-md-5" style="max-width: 800px;">
-            <header class="d-flex align-items-center pb-3 mb-5"><a href="#" class="align-items-center d-flex flex-row text-dark text-decoration-none"> <span class="d-inline-block h3 mb-0 position-relative text-white top-5"><p class="text-decoration-underline text-uppercase">Ice S site</p></span> </a>
+            <header class="d-flex align-items-center pb-3 mb-5"><a href="https://github.com/Ic2furry" class="align-items-center d-flex flex-row text-dark text-decoration-none"> <span class="d-inline-block h3 mb-0 position-relative text-white top-5"><p class="text-decoration-underline text-uppercase">Ice S site</p></span> </a>
             </header>
             <main>
                 <h1 class="fw-bold"><p class="display-6 font-monospace placeholder-glow ps-5 text-white">Сделан с помощью чашки кофе а так же пары батончиков Milky way</p></h1>
