--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </head>
     <body class="align-items-center d-flex font-monospace fw-semibold h6 me-md-5 pb-5 pe-3 pe-md-5 pe-sm-4 poster ps-3 ps-md-0 ps-sm-4 pt-1 text-white">
         <div class="col-lg-8 col-xl-7 dark-background-on-small pb-5 pe-3 pe-md-5 pe-sm-4 ps-3 ps-md-5 ps-sm-4 pt-5 py-md-5" style="max-width: 800px;">
-            <header class="d-flex align-items-center pb-3 mb-5"><a href="https://github.com/Ic2furry" class="align-items-center d-flex flex-row text-dark text-decoration-none"> <span class="d-inline-block h3 mb-0 position-relative text-white top-5"><p class="text-decoration-underline text-uppercase">Ice S site</p></span> </a>
-            </header>
+            <header class="d-flex align-items-center pb-3 mb-5"><a href="#" class="align-items-center d-flex flex-row text-dark text-decoration-none"> <span class="d-inline-block h3 mb-0 position-relative text-white top-5"><p href="https://github.com/Ic2furry" class="text-decoration-underline text-uppercase">Ice S site</p></span> </a>
+            </header>y
             <main>
                 <h1 class="fw-bold"><p class="display-6 font-monospace placeholder-glow ps-5 text-white">Сделан с помощью чашки кофе а так же пары батончиков Milky way</p></h1>
                 <p class="col-md-8 fs-5 opacity-75 text-white">На этом сайте можно найти контакты с помощью которых можно связатся со мной</p>
